# data-science-template

./: .coverage  .env  .gcloudignore  .gitignore  .pylintrc  Makefile  README.md  deps  pyproject.toml  pytest.ini  requirements-poetry.txt
beam/: Dockerfile
cmd/: create_bigquery_resources.py  dump_config.py  render_query.py  run_pipeline.py
config/: data-bigquery.yml  logging-google.yml  logging-local.yml  pipeline-full.yml  project.yml  workspace-dev.yml
config/tables/: pypi_downloads.yml  word_count.yml
data/v1/rendered/: pypi-downloads-summary-update.bql  shakespeare-word-count.bql
resources/routines/bookmark/: close.bql  close.yml  get.bql  get.yml  open.bql  open.yml
resources/tables/: shakespeare.bql.j2
resources/tables/pipeline/: bookmark.yml  metrics.yml
resources/tables/pypi_downloads_summary/: definition.yml  update.bql
resources/tables/shakespeare_word_count/: definition.yml  query.bql
scripts/: test.py  test_default.py
source/project/: __init__.py
source/project/bigquery/: __init__.py  _client.py  _extractor.py  _functions.py  _query.py  _templates.py  operation.py  operations.py  routines.py  tables.py  templates.py
source/project/cli/: __init__.py  parser.py
source/project/cli/test/: test_cli_parser.py
source/project/config/: __init__.py  _config.py  _converters.py  _environment.py  _export.py  _exporter.py  _load.py  _reader.py  _types.py  _validator.py
source/project/config/loaders/: __init__.py  command_line.py  yaml.py
source/project/config/test/: environment.py  test_config_env_loader.py  test_config_exporter.py  test_config_load_file.py  test_config_roundtrip.py
source/project/core/: __init__.py  _dictionary.py  _templates.py  _yaml.py  context.py  dictionary.py  templates.py  testing.py  yaml.py
source/project/core/test/: test_core_context.py  test_core_dictionary.py  test_core_templates.py
source/project/logging/: __init__.py  _logger.py
source/project/pipeline/: __init__.py  _context.py  _step.py  bookmarks.py  step.py
source/project/storage/: __init__.py  _client.py  _filesystem.py
(+1 files in other folders)
